--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsdom": "^21.1.6",
     "@types/morgan": "^1.9.9",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
@@ -27,8 +28,13 @@
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "jsdom": "^23.0.1",
+    "morgan": "^1.10.0",
+    "util": "^0.12.5",
+    "xpath": "^0.0.33",
+    "xpath-ts": "^1.3.13"
   }
 }
