--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "express": "^4.18.2",
     "jsdom": "^23.0.1",
     "morgan": "^1.10.0",
+    "query-string": "^8.1.0",
+    "querystring": "^0.2.1",
     "util": "^0.12.5",
     "xpath": "^0.0.33",
     "xpath-ts": "^1.3.13"
